<resources>
    <string name="app_name">Hearing Aid</string>
    <string name="init_status_msg">Starting Up</string>
    <string name="request_permission_status_msg">"Requesting RECORD_AUDIO Permission..."</string>
    <string name="echoing_status_msg">Engine Echoing...</string>

    <string name="action_settings">Settings</string>
    <string name="cmd_start_hearing_aid">Start Hearing Aid</string>
    <string name="cmd_stop_hearing_aid">Stop Hearing Aid</string>
    <string name="cmd_get_param">FastPathInfo</string>
    <string name="fast_audio_info_msg">nativeSampleRate = %1$s\nnativeSampleBufSize = %2$s\n</string>

    <string name="player_error_msg">Failed to Create Audio Player</string>
    <string name="recorder_error_msg">Failed to Create Audio Recorder</string>
    <string name="mic_error_msg">"Audio recording is not supported"</string>
    <string name="permission_prompt_msg">"This sample needs RECORD_AUDIO permission"</string>
    <string name="permission_granted_msg">RECORD_AUDIO permission granted, touch %1$s to begin</string>
    <string name="permission_error_msg">"Permission for RECORD_AUDIO was denied"</string>
    <string name="min_delay_label_msg">Delay</string>
    <string name="init_delay_val_msg">0.1</string>

    <string name="min_decay_label_msg">Decay</string>
    <string name="init_decay_val_msg">0.1</string>
    <string name="Off">OFF</string>
    <string name="On">ON</string>
    <string name="settings">Settings</string>
    <string name="hearing_aid">Hearing Aid</string>
    <string name="please_plug_in_headphones">Please Plug in   Headphones</string>
    <string name="toggle">Toggle Hearing Aid</string>
</resources>
