<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_rootview">
    <TextView
        android:id="@+id/settings_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/settings"/>


    <TextView
        android:id="@+id/curDecay"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_label"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:text="@string/init_decay_val_msg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDecayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDecay"
        android:textSize="18sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:text="@string/min_decay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/decaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minDecayLabel"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />

    <TextView
        android:id="@+id/curDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minDecayLabel"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:text="@string/init_delay_val_msg"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDelayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDelay"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="15dp"
        android:textSize="18sp"
        android:text="@string/min_delay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/delaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minDelayLabel"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />


</RelativeLayout>