<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/mainLayout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:src="@drawable/ear_trumpet_patent"
        android:scaleType="fitXY"/>



    <TextView
        android:id="@+id/curDelay"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:text="@string/init_delay_val_msg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDelayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDelay"
        android:layout_marginTop="0dp"
        android:text="@string/min_delay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/delaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDelayLabel"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />

    <TextView
        android:id="@+id/curDecay"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minDelayLabel"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:text="@string/init_decay_val_msg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDecayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDecay"
        android:layout_marginTop="0dp"
        android:text="@string/min_decay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/decaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDecayLabel"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />

    <!--<Button-->
        <!--android:id="@+id/capture_control_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:onClick="onEchoClick"-->
        <!--android:text="@string/cmd_start_hearing_aid"-->
        <!--android:background="@color/light_blue"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:textAllCaps="false" />-->


    <ToggleButton
        android:id="@+id/on_off_toggle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:onClick="onEchoClick"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/hearing_aid"/>

</RelativeLayout>

